<?xml version="1.0"?>
<package format="2">
  <name>dynamics_qr_msgs</name>
  <version>1.0.0</version>
  <description>messages for the dynamics_qr_detector, qr_locator and dynamics_map_exporter</description>

  <maintainer email="stefan.dumberger@fh-wels.at">Stefan Dumberger</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export></export>
</package>
